[package]
name = "find-winsdk"
version = "0.2.0"
authors = ["FaultyRAM <explodingpsu@gmail.com>"]
description = "Provides support for detecting Windows SDK installations."
repository = "https://github.com/FaultyRAM/find-winsdk"
readme = "README.md"
keywords = ["winsdk", "detection"]
categories = ["development-tools::build-utils"]
license = "Apache-2.0 OR MIT"

[target.'cfg(target_os = "windows")'.dependencies.serde]
version = "1"

[target.'cfg(target_os = "windows")'.dependencies.serde_derive]
version = "1"

[target.'cfg(target_os = "windows")'.dependencies.winreg]
version = "0.5"
features = ["serialization-serde"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
